# ai_etl_framework

./: .coveragerc  .gitignore  README.md  directory_structure.txt  directory_tree.txt  locustfile.py  project_structure.txt  pyproject.toml  pytest.ini
.github/workflows/: intergration_test.yml
deployment/: docker-compose.test.yml  docker-compose.yml
deployment/images/extractor/: Dockerfile
deployment/images/grafana/: Dockerfile
deployment/images/grafana/config/: grafana.ini
deployment/images/grafana/config/dashboards/: etl-extractor.json  etl-infrastructure.json  etl-pipeline.json  home.json
deployment/images/grafana/config/provisioning/dashboards/: dashboard.yaml
deployment/images/grafana/config/provisioning/datasources/: datasource.yaml
deployment/images/minio/: Dockerfile
deployment/images/minio/config/: minio.json
deployment/images/prometheus/: Dockerfile
deployment/images/prometheus/config/: prometheus.yml
deployment/images/test_container/: Dockerfile
src/ai_etl_framework/cli/: ___init__.py  main.py
src/ai_etl_framework/cli/commands/: test_load.py
src/ai_etl_framework/common/: logger.py  metrics.py  minio_service.py
src/ai_etl_framework/config/: settings.py
src/ai_etl_framework/extractor/: app.py
src/ai_etl_framework/extractor/models/: api_models.py  tasks.py
src/ai_etl_framework/extractor/youtube_transcription/: audio_transcriber.py  downloader.py  manager.py  splitter.py  transcription_service.py
src/ai_etl_framework/services/: base.py
src/ai_etl_framework/tests/load_testing/: system_tester.py
tests/: conftest.py  test_extractor.py  test_intergration.py  test_settings.py
tests/test_config/: test_settings.py
