[tool.poetry]
name = "ai_etl_framework"
version = "0.1.0"
description = "A framework for developing real-time high performance AI ETL pipelines"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "ai_etl_framework", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0"
pydantic-settings = "^2.0"
weaviate-client = "^3.0"
minio = "^7.0"
groq = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-xdist = "^3.3.1"
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
