[tool.poetry]
name = "ai_etl_framework"
version = "0.1.0"
description = "A framework for developing real-time high performance AI ETL pipelines with transcription capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ai_etl_framework", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
# Core dependencies
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic = "^2.10.2"
pydantic-settings = "^2.6.1"

# Metrics and monitoring
prometheus-client = "^0.21.0"
prometheus-fastapi-instrumentator = "^7.0.0"
psutil = "^6.1.0"

# Storage and databases
weaviate-client = "^3.0"
minio = "^7.0"

# AI/ML dependencies
groq = "^0.3.0"
numpy = "^2.1.3"

# HTTP clients
httpx = "^0.28.0"
anyio = "^4.6.2"
backoff = "^2.2.1"

# CLI and utilities
click = "^8.1.7"
python-dotenv = "^1.0.1"
typing-extensions = "^4.12.2"
humanize = "^4.11.0"

# Media processing
yt-dlp = "^2024.11.18"
pydub = "^0.25.1"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
pytest-xdist = "^3.3.1"

# Code quality
black = "^23.7.0"
mypy = "^1.5.1"
isort = "^5.12.0"

# Load testing
locust = "^2.32.3"
pytest-minio-mock = "^0.4.16"

[tool.poetry.scripts]
ai-etl = "ai_etl_framework.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true